# flutter-rust-proto-demo

./: .gitignore  Cargo.toml  README.md
mobile/: .packages  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_config_subset
mobile/.dart_tool/flutter_build/d3baacd80ea128fc17a936a6399df8ee/: .filecache  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  linux_engine_sources.d  outputs.json  unpack_linux.stamp
mobile/lib/: bridge_generated.dart  main.dart
mobile/native/: Cargo.toml
mobile/native/src/: api.rs  bridge_generated.rs
src/: lib.rs
src/rpc/: Cargo.toml  build.rs
src/rpc/proto/demo/: demo.proto
src/rpc/src/: lib.rs
