[package]
name = "proto-demo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/rpc",
    "mobile/native",
]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
demo-rpc = { path = "./src/rpc"}
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.0"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.8"
futures = "0.3.19"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "0.1.2"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
rust-embed = "6.3.0"
